k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinema-tickets-app
  namespace: cinema-tickets
  labels:
    app.kubernetes.io/name: cinema-tickets
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: cinema-tickets
spec:
  replicas: 1

  selector:
    matchLabels:
      app.kubernetes.io/name: cinema-tickets
      app.kubernetes.io/component: backend

  template:
    metadata:
      labels:
        app.kubernetes.io/name: cinema-tickets
        app.kubernetes.io/component: backend
    spec:
      containers:
        - name: app
          image: isaevskaevica/cinema-tickets:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8080
              name: http

          startupProbe:
            httpGet:
              path: /actuator/health
              port: http
            periodSeconds: 6
            failureThreshold: 25

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            periodSeconds: 8

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            periodSeconds: 15

          resources:
            requests:
              cpu: 200m
              memory: 320Mi
            limits:
              memory: 896Mi
