k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cinema-tickets-app
  namespace: cinema-tickets
  labels:
    app.kubernetes.io/name: cinema-tickets
    app.kubernetes.io/part-of: cinema-tickets
    app.kubernetes.io/component: backend
spec:
  selector:
    app.kubernetes.io/name: cinema-tickets
    app.kubernetes.io/component: backend
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
