k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: cinema-tickets
  labels:
    app.kubernetes.io/name: cinema-tickets
    app.kubernetes.io/part-of: cinema-tickets
    app.kubernetes.io/component: database
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: cinema-tickets
    app.kubernetes.io/component: database
  ports:
    - port: 5432
      targetPort: 5432
